<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_Abreviatura"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/txt_Avreviacion"
        android:textAlignment="center"
        android:textSize="64sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_Id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/txt_IdClasf"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/item_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/txt_DescripcionClasf"
            />
    </LinearLayout>
</LinearLayout>