<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/margin_high"
    tools:context=".fragment.AgregarClasificacionFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_high"
        android:text="@string/txt_IntroNuevaClasificacion"
        android:textSize="24sp" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_abreviacion_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginBottom="@dimen/margin_standard"
        android:hint="@string/txt_abreviacion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_abreviacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_descripcion_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_Descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginBottom="@dimen/margin_standard"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_GuardarClasif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:backgroundTint="@color/purple_700"
        android:text="Guardar"
        android:textAllCaps="true" />

</LinearLayout>